adiciona a função de exportar o espelho de ponto eletronico (#78)
